# AFS

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README  xmake.lua
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
db/migration/: 00000000.sql  00000001.sql
include/afsproject/: afs.h  audio_engine.h  audio_file.h  db.h  either.h  fft.h  flac_file.h  md5.h  process_audio.h  signal.h  spectrogram.h  spectrum.h  wave.h  wave_file.h
include/asfproject/: audio_engine.h  audio_file.h  fft.h  process_audio.h  signal.h  spectrogram.h  spectrum.h  wave.h  wave_file.h
src/: CMakeLists.txt  afs.cpp  audio_engine.cpp  db.cpp  either.h  fft.cpp  flac_file.cpp  main.cpp  md5.cpp  process_audio.cpp  process_audio.h  signal.cpp  spectrogram.cpp  spectrum.cpp  wave.cpp  wave_file.cpp
test/: CMakeLists.txt
test/fixtures/: CMakeLists.txt  setup_fixtures.sh  verify_fixtures.cmake
test/integration/: CMakeLists.txt  test_flac_decoder.cpp
test/unit/: CMakeLists.txt
test/unit/utilities/: test_utf8_decoding.cpp
